Fix input wrapper size on mobile screen

--- a/css/main.css
+++ b/css/main.css
@@ -688,9 +688,8 @@ header .menu--icon {
 }
 .input .input--with--button {
   display: flex;
-  flex-direction: row;
-  justify-content: flex-end;
   align-items: center;
+  justify-content: flex-end;
   width: 696px;
   height: 64px;
   margin-top: 55px;
@@ -729,7 +728,7 @@ header .menu--icon {
     align-items: center;
   }
   .input .input--with--button {
-    width: 70%;
+    width: 90%;
   }
   .input .input--with--button button {
     width: 20%;
@@ -753,7 +752,28 @@ header .menu--icon {
     line-height: 1rem;
   }
   .input .input--with--button {
-    margin: 0 auto;
+    display: flex;
+    gap: 1.5rem;
+  }
+  .input .input--with--button input {
+    width: 100%;
+    height: 100%;
+    font-size: 16px;
+  }
+  .input .input--with--button .button__wrapper {
+    max-width: 32%;
+    max-height: 65px;
+    width: 100%;
+    height: 100%;
+  }
+  .input .input--with--button .button__wrapper button {
+    width: 100%;
+    height: 100%;
+    border-top-left-radius: 0px;
+    border-top-right-radius: 12px;
+    border-bottom-right-radius: 12px;
+    border-bottom-left-radius: 0px;
+    font-size: 18px;
   }
 }
 footer {
