--- a/scss/_input.scss
+++ b/scss/_input.scss
@@ -28,9 +28,8 @@
   }
   .input--with--button {
     display: flex;
-    flex-direction: row;
-    justify-content: flex-end;
     align-items: center;
+    justify-content: flex-end;
     width: 696px;
     height: 64px;
     margin-top: 55px;
@@ -72,7 +71,7 @@
     align-items: center;
 
     .input--with--button {
-      width: 70%;
+      width: 90%;
       button {
         width: 20%;
         font-size: 14px;
@@ -83,10 +82,12 @@
 @media screen and (max-width: 376px) {
   .input {
     margin-bottom: 3rem;
+
     .content__wrapper {
       max-width: 20rem;
       max-height: 6rem;
       padding-bottom: 2rem;
+
       p {
         margin: 0 auto;
         width: 100%;
@@ -95,8 +96,31 @@
         line-height: 1rem;
       }
     }
+
     .input--with--button {
-      margin: 0 auto;
+      display: flex;
+      gap: 1.5rem;
+
+      input {
+        width: 100%;
+        height: 100%;
+        font-size: 16px;
+      }
+      .button__wrapper {
+        max-width: 32%;
+        max-height: 65px;
+        width: 100%;
+        height: 100%;
+        button {
+          width: 100%;
+          height: 100%;
+          border-top-left-radius: 0px;
+          border-top-right-radius: 12px;
+          border-bottom-right-radius: 12px;
+          border-bottom-left-radius: 0px;
+          font-size: 18px;
+        }
+      }
     }
   }
 }
